fix spacing

--- a/src/Cards.css
+++ b/src/Cards.css
@@ -2,9 +2,6 @@
   margin: 0;
   padding: 0;
 }
- .grey-text {
-  color: red !important;
-}
 
 body {
   background-color: whitesmoke;
@@ -24,14 +21,14 @@ body {
 .galvanize-logo {
   height: 77px;
   padding-top: 21px;
-  padding-left: 21px;
+  padding-left: 50px;
   padding-bottom: 20px;
 }
 
 .eventbrite-logo {
   height: 77px;
   padding-top: 21px;
-  padding-right: 21px;
+  padding-right: 50px;
   padding-bottom: 21px;
   float: right;
 }
@@ -45,13 +42,13 @@ body {
   font-size: 2.5em;
   font-weight: 300;
   padding-top: 30px;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding-bottom: 10px;
+  padding-left: 47px;
 }
 
 #cards {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 #cardIcon {
@@ -62,7 +59,7 @@ body {
 .table {
   width: 100%;
   vertical-align: top;
-  text-align: center;
+  text-align: left;
   border: 0;
   margin: 0;
 }
@@ -70,29 +67,51 @@ body {
 .galvanizeG {
   width: 150px;
   padding: 23px;
-  text-align: center;
+  text-align: left;
+  margin-left: 0 !important;
+  padding-left: 0 !important;
+  padding-top: 50px;
+}
+
+#hireOur {
+  text-decoration: none;
+  color: #C6BFB7;
 }
 
 .galvanizeGtd {
   width: 55;
   vertical-align: top;
-  text-align: center;
+  text-align: left;
+  float: left;
+}
+
+td {
+  padding: 0 !important;
+}
+#rightSide {
+  margin-bottom: 20px !important;
 }
 
 .footerNavContainer {
   vertical-align: top;
-  text-align: center;
+  text-align: left;
   border: none;
 }
 
+.menuItems {
+  margin-top: 40px;
+  float: left;
+  margin-left: 0 !important;
+}
+
 .footerNav {
-  text-align: center;
+  text-align: left;
 }
 
 .menuFooter {
   display: block;
   color: #C6BFB7;
-  text-align: center;
+  text-align: left;
   float: left;
 }
 
@@ -113,6 +132,7 @@ table {
 
 .menuAbout:hover {
   color: white;
+  text-decoration: none;
 }
 
 .menuFAQ {
@@ -124,6 +144,7 @@ table {
 
 .menuFAQ:hover {
   color: white;
+  text-decoration: none;
 }
 
 .menuPress {
@@ -135,6 +156,7 @@ table {
 
 .menuPress:hover {
   color: white;
+  text-decoration: none;
 }
 
 .menuCareers {
@@ -154,6 +176,7 @@ table {
   padding-left: 10px;
   float: left;
   text-decoration: none;
+  padding-right: 150px;
 }
 
 .menuLogin:hover {
@@ -196,6 +219,6 @@ footer {
   width: 100%;
   height: 200px;
   bottom: 0;
-  text-align: center;
+  text-align: left;
   opacity: 0.97;
 }
